third_party/move/move-compiler-v2/tests/more-v1/parser/expr_while_missing_parens.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/expr_while_missing_parens.move:4:15
  │
4 │         while v < 3 { v = v + 1 }
  │               ^
  │               │
  │               Unexpected 'v'
  │               Expected '('
